Fix work tiles on mobile

--- a/client/components/css/work.css
+++ b/client/components/css/work.css
@@ -1,24 +1,24 @@
 .projectsContainer{
-   width: 90%;
-   position: absolute;
-   margin-top: 30px;
-   max-width: 1000px;
-   display: flex;
-   flex-flow: row wrap;
+	width: 90%;
+	position: absolute;
+	margin-top: 30px;
+	max-width: 1000px;
+	display: flex;
+	flex-flow: row wrap;
 }
 .myWork {
 	position: fixed;
 	margin: -30px 0 0 0;
-    background: rgba(0,0,0,0.2);
-    transition: margin-left 0.3s ease-in-out;
+	background: rgba(0,0,0,0.2);
+	transition: margin-left 0.3s ease-in-out;
 }
 
 .myWorkProject {
-    position: fixed;
-    margin: -30px 0 0 0;
-    z-index: 5;
-    background: rgba(0,0,0,0.2);
-    transition: margin-left 0.3s ease-in-out;
+	position: fixed;
+	margin: -30px 0 0 0;
+	z-index: 5;
+	background: rgba(0,0,0,0.2);
+	transition: margin-left 0.3s ease-in-out;
 }
 
 .bgTitle {
@@ -37,82 +37,83 @@
 	z-index: -1;
 }
 .tiles {
-    position: fixed;
-   padding: 30px 0px;
-    max-width: 90%;
-   display: flex;
+	padding: 30px 0px;
+	max-width: 90%;
+	width: 90%;
+	display: flex;
 	flex-flow: column wrap;
 }
 .tileContainer {
-   position: relative;
+	position: relative;
 	width: 100%;
 	height: 90px;
-   margin: 5px;
+	margin: 5px;
 }
 .tile {
 	position: absolute;
-   right: 0px;
-   opacity: 0.7;
-   display: block;
+	right: 0px;
+	opacity: 0.7;
+	display: block;
 	height: 100%;
-   width: 200px;
-   overflow: hidden;
-   background: rgba(255,255,255,0.2);
+	width: 200px;
+	overflow: hidden;
+	background: rgba(255,255,255,0.2);
+	z-index: 1;
 }
 .tile img {
 	min-height: 50px;
-   z-index: 1;
 }
 .tileInfo {
-   position: absolute;
-   z-index: 2;
-   right: 200px;
-   top: 0px;
-   left: 0px;
+	position: relative;
+	z-index: 2;
+	right: 200px;
+	top: 0px;
+	left: 0px;
 }
 .tileInfo p {
-   margin: 0px;
-   padding: 0px 3px;
-   width: auto
+	margin: 0px;
+	padding: 0px 3px;
+	display: block;
+	background: rgba(0,0,0,0.5);
 }
 .project {
-   padding-top: 30px;
+	padding-top: 30px;
 	-webkit-animation-name: fadeIn;
-    -webkit-animation-duration: 1s;
- 	animation-name: fadeIn;
-  	animation-duration: 1s;
+	-webkit-animation-duration: 1s;
+	animation-name: fadeIn;
+	animation-duration: 1s;
 	/*margin-top: -50px;*/
 	overflow: hidden;
 	text-align: right;
 }
 .projectTitle {
-   font-size: 20px
+	font-size: 20px
 }
 
 .mainImageContainer {
-   max-height: 150px;
-   overflow: hidden;
+	max-height: 150px;
+	overflow: hidden;
 }
 .mainImage {
 	height: auto;
-   margin-left: -10%;
+	margin-left: -10%;
 	width: 100%;
 }
 .content {
-    height: auto;
+	height: auto;
 }
 .secondImage {
-   max-width: 100%;
-   height: auto;
-   max-height: 200px;
-   opacity: 0.8;
-   transition: opacity 0.3s ease-in;
+	max-width: 100%;
+	height: auto;
+	max-height: 200px;
+	opacity: 0.8;
+	transition: opacity 0.3s ease-in;
 }
 .project img:active, .project img:hover {
-   opacity: 1;
+	opacity: 1;
 }
 .blerb, .descr {
-    text-align: right;
+	text-align: right;
 	max-width: 100%;
 }
 
@@ -120,9 +121,9 @@
 .backButton {
 	position: fixed;
 	margin-left: 10px;
-    z-index: 5;
+	z-index: 5;
 	margin-top: 0px;
-    background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.2);
 	display: flex;
 }
 .backButton span {
@@ -135,9 +136,9 @@
 		margin-top: 20%;
 		margin-left: 30%;
 	}
-   .projectsContainer {
-      padding-left: 10%;
-   }
+	.projectsContainer {
+		padding-left: 10%;
+	}
 	.myWork {
 		margin-left:  70px;
 	}
@@ -145,50 +146,51 @@
 		margin-left: -50px;
 	}
 	.tiles {
-      margin-top: 50px;
-      padding-left: 0px;
-      max-height: 350px;
-      flex-flow: row wrap;
-      justify-content: center;
-   }
-   .tileContainer {
-      margin: 10px;
-	  	position: relative;
-      z-index: 5;
-      opacity: 0.7;
-      width: 200px;
-	    height: 150px;
-       transform: scale(1);
-	    -ms-transition: all 0.2s ease-in-out;
+		margin-top: 50px;
+		padding-left: 0px;
+		max-height: 350px;
+		flex-flow: row wrap;
+		justify-content: center;
+	}
+	.tileContainer {
+		margin: 10px;
+		position: relative;
+		z-index: 5;
+		opacity: 0.7;
+		width: 200px;
+		height: 150px;
+		transform: scale(1);
+		-ms-transition: all 0.2s ease-in-out;
 		transition: all 0.2s ease-in-out;
 	}
 	.tileContainer:hover {
-      z-index: 6;
-      opacity: 1;
+		z-index: 6;
+		opacity: 1;
 		transform: scale(1.01)
 	}
-   .tileInfo {
-      top: 0px;
-      bottom: 10px;
-      right:20px;
-      opacity: 0;
-      background: rgba(0,0,0,0.2);
-      transition: opacity 0.3s 0.2s ease-out;
-   }
-   .tileContainer:hover .tileInfo {
-      opacity: 1
-   }
-   .tileInfo p {
-      font-size: 20px;
-   }
+	.tileInfo {
+		top: 0px;
+		bottom: 0px;
+		right: 0px;
+		opacity: 0;
+		background: rgba(0,0,0,0.2);
+		transition: opacity 0.3s 0.2s ease-out;
+	}
+	.tileContainer:hover .tileInfo {
+		opacity: 1
+	}
+	.tileInfo p {
+		background: unset;
+		font-size: 20px;
+	}
 	.tile img {
-      top: 0px;
-      position: relative;
+		top: 0px;
+		position: relative;
 		min-height: 150px;
-   }
+	}
 
-   .backButton {
-	   transition: padding 0.2s ease-in-out;
+	.backButton {
+		transition: padding 0.2s ease-in-out;
 		padding-left: 20px;
 		padding-right: 40px;
 		margin-left: -50px;
@@ -209,61 +211,61 @@
 		width: auto;
 		width: 60px;
 	}
-   .project {
-      max-width: 90%;
-   }
+	.project {
+		max-width: 90%;
+	}
 	.projectTitle {
 		margin-right: 0px;
 	}
-   .mainImageContainer {
-      max-height: 200px;
-   }
-   .mainImage {
-      opacity: 0.9;
-      filter: invert(0.2);
+	.mainImageContainer {
+		max-height: 200px;
+	}
+	.mainImage {
+		opacity: 0.9;
+		filter: invert(0.2);
 		margin-left: 0;
 		width: 100%;
-      transition: opacity 0.2s ease-in-out;
-      transition: filter 0.3s ease-out 0.1s;
+		transition: opacity 0.2s ease-in-out;
+		transition: filter 0.3s ease-out 0.1s;
 	}
-   .mainImage:hover {
-      opacity: 1;
-      filter: none;
-   }
+	.mainImage:hover {
+		opacity: 1;
+		filter: none;
+	}
 }
 @media screen and (min-width: 800px){
-   .tiles {
-      justify-content: flex-start;
-      padding-left: 0px;
-   }
-   .content {
-      display: flex;
-      margin-top: 30px;
-      width: 100%;
-   }
-   .descr {
-      min-width: 400px;
-      margin-right: 30px;
-   }
-   .secondImage {
-      max-height: 300px;
-   }
+	.tiles {
+		justify-content: flex-start;
+		padding-left: 0px;
+	}
+	.content {
+		display: flex;
+		margin-top: 30px;
+		width: 100%;
+	}
+	.descr {
+		min-width: 400px;
+		margin-right: 30px;
+	}
+	.secondImage {
+		max-height: 300px;
+	}
 }
 @media screen and (min-width:   1080px) {
 	.myWorkProject, .backButton {
-      margin-left: -100px
-   }
-   .tiles {
-      max-width: 100%;
-   }
+		margin-left: -100px
+	}
+	.tiles {
+		max-width: 100%;
+	}
 
-   .project {
-      max-width: 100%;
-      margin-top: -100px;
-   }
+	.project {
+		max-width: 100%;
+		margin-top: -100px;
+	}
 
-   .descr {
-      max-width: 500px
-   }
+	.descr {
+		max-width: 500px
+	}
 
 }
